# ex-northwind-commerce

./: .env.example  .gitignore  README.md  docker-compose.yml  index.scry
.github/workflows/: ci.yml  deploy.yml
api/: pyproject.toml
api/migrations/: 001_initial.sql
api/src/northwind_api/: catalog.py  config.py  main.py  risk.py  schemas.py  stripe_client.py
api/tests/: test_api.py
docs/: architecture.md  decision-log.md  runbook.md
infra/environments/: production.tfvars  staging.tfvars
infra/terraform/: main.tf
scripts/: seed-data.sh  smoke-test.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  domain.ts  styles.css
web/tests/: domain.test.ts
